--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
-NODE_ENV=development | production
+NODE_ENV=development # or production
 PORT=3000
 DB_URL=db-url-here
+CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+INNGEST_SIGNING_KEY=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
