--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@clerk/express": "^1.7.67",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.1.5"
   }
 }
